kubernetesResources/ingress/selfSignedCertificates/externalLoadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
#  Create in same namespace as the ingress controller it is pointing to
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8080
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  selector:
    k8s-app: nginx-ingress-lb
