kubernetesResources/ingress/selfSignedCertificates/ingress_no_ssl.yaml
# Version  no Cert-manager
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 8080
